--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/*  your css code here. If applicable */
-.accio-frame{
-	width:800px;
-	height:600px;
+iframe {
+    border: 2px solid black; /* optional */
 }
